--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,18 +16,36 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.title {
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.title::before {
+  content: "";
+  display: block;
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: block;
+  border-bottom-width: 12px;
+  border-bottom-style: solid;
+  border-bottom-color: rgba(90, 139, 182, 1);
+  /* width: 100%; */
+  /* height: 2px; */
+  /* background: black; 선 색상 */
+  /* margin-top: 0.5rem; 선과 텍스트 사이의 간격 */
 }
